feat: add offline lake warehouse configuration